# computational_physics_newman

./: .gitignore  README.md  main.py  pyproject.toml
chapter10/: 10-13.py  10-3.py  dla_simulator.py  dla_simulator_center_anchor.py  ex_10-12.ipynb  ex_10-4.ipynb
chapter3/: ex_3-1.ipynb  ex_3-3.ipynb  ex_3-7.ipynb
chapter5/: ex_5-17.ipynb  ex_5-20.ipynb  ex_5-23.ipynb
chapter7/: ex_7-7.ipynb  ex_7-9.ipynb
